<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#565454"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toText" />

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromText" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryText" />

    <Button
        android:id="@+id/convertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="@color/lime"
        android:gravity="center_horizontal"
        android:text="@string/button_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSpinner" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="15dp"
        android:text="@string/label2"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="100dp"
        android:text="@string/label3"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="15dp"
        android:text="@string/label1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <EditText
        android:id="@+id/input"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/input_placeholder"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFDFD"
        android:textColorHint="#D5D5D5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />

    <TextView
        android:id="@+id/output"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="20dp"
        android:text="@string/output_filler"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>